# PolyGraph

./: .gitattributes  .gitignore  .oxfmtignore  .oxlintrc.json  .polygraph.yml  .prettierignore  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  next.config.mjs  package.json  test-setup.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml
analyzer-core/: Cargo.toml  analyzer-core.node  build.rs  index.d.ts  package.json
analyzer-core/src/: lib.rs
app/: layout.tsx
app/vello-test/: page.tsx
bench/: baselines.json  fetch.ts  fixtures.ts  golden.test.ts  harness.ts  lod-parity.ts  metrics.ts  rep-lod.ts  run.ts  stability.test.ts  synthetic.ts
bench/__snapshots__/: golden.test.ts.snap
bench/stability/: sample-ts-layered.json  sample-ts-smart.json
cli/: index.ts
components/: EdgeDetailPanel.tsx  ErrorBoundary.tsx  Explorer.tsx  ExportPanel.tsx  FiltersPanel.tsx  GraphCanvas.tsx  LayoutOverlay.tsx  NodeDetailPanel.tsx  PixiGraphCanvas.tsx  ProblemsPanel.tsx  QueryBar.tsx  RepLodOverlay.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  SourcePreview.tsx  ThemeToggle.tsx  UploadDropzone.test.tsx  UploadDropzone.tsx  VelloGraphCanvas.tsx  VelloPoc.tsx  useScene.test.ts  useScene.ts
components/nodes/: GraphFlowNode.tsx
components/ui/: provider.tsx
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI.md  RELEASING.md  SCALE-100K.md
docs/archive/: README.md
docs/release-notes/: v0.1.0.md
language-packs/bash/: pack.yaml  tags.scm
language-packs/c/: pack.yaml  tags.scm
language-packs/cpp/: pack.yaml  tags.scm
language-packs/csharp/: pack.yaml  tags.scm
language-packs/dart/: pack.yaml  tags.scm
language-packs/fsharp/: pack.yaml  tags.scm
language-packs/go/: pack.yaml  tags.scm
language-packs/haskell/: pack.yaml  tags.scm
language-packs/java/: pack.yaml  tags.scm
language-packs/jsonc/: pack.yaml  tags.scm
language-packs/julia/: pack.yaml  tags.scm
language-packs/kotlin/: pack.yaml  tags.scm
language-packs/lua/: pack.yaml  tags.scm
language-packs/nix/: pack.yaml  tags.scm
language-packs/objc/: pack.yaml  tags.scm
language-packs/ocaml/: pack.yaml  tags.scm
language-packs/php/: pack.yaml  tags.scm
language-packs/python/: pack.yaml  tags.scm
language-packs/r/: pack.yaml  tags.scm
language-packs/ruby/: pack.yaml  tags.scm
language-packs/rust/: pack.yaml  tags.scm
language-packs/scala/: pack.yaml  tags.scm
language-packs/sql/: pack.yaml  tags.scm
language-packs/swift/: pack.yaml  tags.scm
language-packs/wasm/: pack.yaml  tags.scm
language-packs/zig/: pack.yaml  tags.scm
lib/: aggregate.test.ts  aggregate.ts  file-filters.test.ts  file-filters.ts  layout-client.test.ts  layout-client.ts  layout.test.ts  layout.ts  layout.worker.ts
lib/analyzer/: analyzer.test.ts  calls.ts  components.ts  composition.ts  edge-accumulator.test.ts  edge-accumulator.ts  evidence.test.ts  evidence.ts  externals.test.ts  externals.ts  facet-schema.test.ts  facet-schema.ts  facets.test.ts  facets.ts  imports.ts  index.ts  inheritance.ts  nodes.ts  paradigms.test.ts  project.ts  provider.ts  roles.ts
lib/cli/: args.test.ts  args.ts  check.test.ts  check.ts  diff-cmd.ts  git.ts  report.ts  scan.ts
lib/client/: api.test.ts  api.ts  download.ts  env.ts  native.ts  read-files.ts  updates.ts
lib/config/: load.test.ts  load.ts  schema.ts  validate.test.ts
lib/diff/: diff.test.ts  diff.ts
lib/editor/: commands.test.ts  commands.ts
lib/export/: graph-formats.test.ts  graph-formats.ts  html-report.test.ts  html-report.ts  svg.test.ts  svg.ts
lib/glob/: match.test.ts  match.ts
lib/graph/: auto-collapse.test.ts  auto-collapse.ts  client-catalog.test.ts  client-catalog.ts  collapse-model.test.ts  collapse-model.ts  collapse-ownership.test.ts  collapse.test.ts  collapse.ts  connections.test.ts  connections.ts  dimension-index.test.ts  dimension-index.ts  dimensions.test.ts  dimensions.ts  expand-toggle.test.ts  expand-toggle.ts  facet-aliases.test.ts  facet-aliases.ts  facet-selection.test.ts  facet-selection.ts  facets-write.test.ts  facets-write.ts  filter-derive.test.ts  filter-derive.ts  filters.test.ts  filters.ts  frame.test.ts  frame.ts  global-relayout.test.ts  global-relayout.ts  group-bootstrap.test.ts  group-bootstrap.ts  group-by-options.test.ts  group-by-options.ts  group-collapse-modes.test.ts  group-cut.test.ts  group-cut.ts  grouping-modes.test.ts  grouping-snapshot.test.ts  (+90 more)
lib/kernel/: dimensions.test.ts  index.ts  kernel.test.ts  provider.ts  registry.ts
lib/layout/: backbone.test.ts  backbone.ts  clusters-snapshot.test.ts  (+23 more)
mcp/: README.md  cache.test.ts  cache.ts  format.ts  operations.test.ts  operations.ts  server.ts  telemetry.ts
scripts/: build-sidecar.mjs  dev.mjs
sidecar/: orphan-watch.test.ts  orphan-watch.ts  server.test.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
types/: globals.d.ts
vello-renderer/: Cargo.toml
vello-renderer/pkg/: package.json  vello_renderer.d.ts  vello_renderer.js  vello_renderer_bg.wasm  vello_renderer_bg.wasm.d.ts
vello-renderer/src/: lib.rs
(+95 files in other folders)
