[package]
name = "analyzer-core"
version = "0.1.0"
edition = "2021"
description = "Native (napi-rs) tree-sitter analysis core for the TS Module Scanner kernel"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-kotlin = "0.3"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-scala = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter-json = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-fsharp = "0.1.0"

[build-dependencies]
napi-build = "2"
cc = "1"

[profile.release]
opt-level = 3
lto = true
