[package]
name = "analyzer-core"
version = "0.1.0"
edition = "2021"
description = "Native (napi-rs) tree-sitter analysis core for the PolyGraph kernel"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
streaming-iterator = "0.1"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-scala = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-fsharp = "0.3"
tree-sitter-json = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-objc = "3"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1"
tree-sitter-haskell = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-ocaml = "0.25"
tree-sitter-dart = "0.2"
tree-sitter-julia = "0.23"
tree-sitter-r = "1"
tree-sitter-nix = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter-sequel = "0.3"
rayon = "1"

[build-dependencies]
napi-build = "2"
cc = "1"

[profile.release]
opt-level = 3
lto = true
