[package]
name = "polygraph"
version = "0.1.0"
description = "PolyGraph — interactive dependency-graph analyzer"
authors = ["PolyGraph contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/CapsaicinBunny/PolyGraph"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Windows-only: a pre-launch native dialog (rfd) + open-in-browser (open) for the
# "WebView2 runtime missing" warning. The portable build doesn't bundle WebView2's
# ~180 MB runtime, so warn-and-link if a machine lacks it. Both crates are already in
# the dependency tree on every platform; this just makes them direct deps on Windows.
[target.'cfg(windows)'.dependencies]
rfd = "0.16"
open = "5"
