[package]
name = "vello-renderer"
version = "0.1.0"
edition = "2021"
description = "WebGPU vector renderer (Vello) for the TS Module Scanner graph"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vello = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlCanvasElement", "Navigator", "Gpu"]

[profile.release]
opt-level = "s"
lto = true
