[package]
name = "vello-renderer"
version = "0.1.0"
edition = "2021"
description = "WebGPU vector renderer (Vello) for the TS Module Scanner graph"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vello 0.9 uses a current wgpu (WebGPU enabled by default) that matches today's
# Chrome/Dawn — older wgpu sent the removed `maxInterStageShaderComponents` limit.
vello = "0.9"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlCanvasElement", "Navigator", "Gpu"]

[profile.release]
opt-level = "s"
lto = true
